@@ -1,7 +1,7 @@
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
- * Copyright 1997-2010 Oracle and/or its affiliates. All rights reserved.
+ * Copyright 1997-2012 Oracle and/or its affiliates. All rights reserved.
  *
  * Oracle and Java are registered trademarks of Oracle and/or its affiliates.
  * Other names may be trademarks of their respective owners.
@@ -42,27 +42,14 @@ package org.netbeans.installer.utils.applications;
 import java.io.File;
 import java.io.FileFilter;
 import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import org.netbeans.installer.utils.ErrorManager;
-import org.netbeans.installer.utils.FileUtils;
-import org.netbeans.installer.utils.LogManager;
-import org.netbeans.installer.utils.ResourceUtils;
-import org.netbeans.installer.utils.StringUtils;
-import org.netbeans.installer.utils.SystemUtils;
+import org.netbeans.installer.utils.*;
 import org.netbeans.installer.utils.XMLUtils;
 import org.netbeans.installer.utils.exceptions.XMLException;
-import org.netbeans.installer.utils.helper.FilesList;
 import org.netbeans.installer.utils.helper.ErrorLevel;
+import org.netbeans.installer.utils.helper.FilesList;
 import org.netbeans.installer.wizard.components.panels.netbeans.NbWelcomePanel;
 import org.netbeans.installer.wizard.components.panels.netbeans.NbWelcomePanel.BundleType;
 import org.w3c.dom.Document;
@@ -203,6 +190,7 @@ public class NetBeansUtils {
         }
         LogManager.log("Update update_tracking files for cluster directory " + clusterDir);
         File[] files = new File(clusterDir,UPDATE_TRACKING_DIR).listFiles(new FileFilter() {
+            @Override
             public boolean accept(File pathname) {
                 return pathname.getName().endsWith(".xml");
             }
@@ -245,19 +233,13 @@ public class NetBeansUtils {
             }
         } catch (XMLException e) {
             LogManager.log(e);
-            IOException ex = new IOException("Can`t update CRC in update_tracking files");
-            ex.initCause(e);
-            throw ex;
+            throw new IOException("Can`t update CRC in update_tracking files", e);
         } catch (NumberFormatException e) {
             LogManager.log(e);
-            IOException ex = new IOException("Can`t update CRC in update_tracking files");
-            ex.initCause(e);
-            throw ex;
+            throw new IOException("Can`t update CRC in update_tracking files", e);
         } catch (IOException e) {
             LogManager.log(e);
-            IOException ex = new IOException("Can`t update CRC in update_tracking files");
-            ex.initCause(e);
-            throw ex;
+            throw new IOException("Can`t update CRC in update_tracking files", e);
         }
     }
 
@@ -542,7 +524,13 @@ public class NetBeansUtils {
      */
     public static File getNetBeansUserDirFile(File nbLocation) throws IOException {
         String dir = getNetBeansUserDir(nbLocation);
-        dir = dir.replace(USER_HOME_TOKEN, System.getProperty("user.home"));
+        LogManager.log(ErrorLevel.DEBUG, "System.getProperty(netbeans.default_userdir_root): " + System.getProperty("netbeans.default_userdir_root"));
+        if (dir.contains(DEFAULT_USERDIR_ROOT) && System.getProperty("netbeans.default_userdir_root", null) != null) {
+            dir = dir.replace(DEFAULT_USERDIR_ROOT, System.getProperty("netbeans.default_userdir_root"));
+        }
+        if (dir.contains(USER_HOME_TOKEN)) {
+            dir = dir.replace(USER_HOME_TOKEN, System.getProperty("user.home"));
+        }
         return new File(dir);
     }
     
@@ -551,12 +539,49 @@ public class NetBeansUtils {
      * @param nbLocation NetBeans home directory
      * @throws IOException if can`t get netbeans default userdir
      */
-    public static String getNetBeansUserDir(File nbLocation) throws IOException {
+    private static String getNetBeansUserDir(File nbLocation) throws IOException {
         File netbeansconf = new File(nbLocation, NETBEANS_CONF);
         String contents = FileUtils.readFile(netbeansconf);
         Matcher matcher = Pattern.compile(
                 NEW_LINE_PATTERN + SPACES_PATTERN +
                 NETBEANS_USERDIR +
+                "\"(.*?)\"").matcher(contents);
+        if(matcher.find() && matcher.groupCount() == 1) {
+            return matcher.group(1);
+        } else {
+            throw new IOException(StringUtils.format(
+                    ERROR_CANNOT_GET_USERDIR_STRING,netbeansconf));
+        }
+    }
+    
+    /**
+     * Get resolved netbeans cache directory
+     * @param nbLocation NetBeans home directory
+     * @throws IOException if can`t get netbeans default cachedir
+     */
+    public static File getNetBeansCacheDirFile(File nbLocation) throws IOException {
+        String dir = getNetBeansCacheDir(nbLocation);
+        LogManager.log(ErrorLevel.DEBUG, "System.getProperty(netbeans.default_cachedir_root): " + System.getProperty("netbeans.default_cachedir_root"));
+        if (dir.contains(DEFAULT_CACHEDIR_ROOT) && System.getProperty("netbeans.default_cachedir_root", null) != null) {
+            dir = dir.replace(DEFAULT_CACHEDIR_ROOT, System.getProperty("netbeans.default_cachedir_root"));
+        }
+        if (dir.contains(USER_HOME_TOKEN)) {
+            dir = dir.replace(USER_HOME_TOKEN, System.getProperty("user.home"));
+        }
+        return new File(dir);
+    }
+    
+    /**
+     * Get netbeans user directory as it is written in netbeans.conf
+     * @param nbLocation NetBeans home directory
+     * @throws IOException if can`t get netbeans default userdir
+     */
+    private static String getNetBeansCacheDir(File nbLocation) throws IOException {
+        File netbeansconf = new File(nbLocation, NETBEANS_CONF);
+        String contents = FileUtils.readFile(netbeansconf);
+        Matcher matcher = Pattern.compile(
+                NEW_LINE_PATTERN + SPACES_PATTERN +
+                NETBEANS_CACHEDIR +
                 "\"(.*?)\"").matcher(contents);
         if(matcher.find() && matcher.groupCount() == 1) {
             return matcher.group(1);
@@ -707,7 +732,7 @@ public class NetBeansUtils {
             "-cp", classpath,
             UPDATER_FRAMENAME, "--nosplash"});
     }
-    public static final boolean setModuleStatus(File nbLocation, String clusterName, String moduleName, boolean enable) {        
+    public static boolean setModuleStatus(File nbLocation, String clusterName, String moduleName, boolean enable) {        
         LogManager.log(ErrorLevel.DEBUG,
                 ((enable) ? "... enabling" : "disabling") +
                 " module " + moduleName + 
@@ -748,7 +773,7 @@ public class NetBeansUtils {
         return false;
     }
     
-    public static final Boolean getModuleStatus(File nbLocation, String clusterName, String moduleName) {        
+    public static Boolean getModuleStatus(File nbLocation, String clusterName, String moduleName) {        
         LogManager.log(ErrorLevel.DEBUG, 
                 "... getting status of module " + moduleName + 
                 " in cluster " + clusterName + 
@@ -765,7 +790,7 @@ public class NetBeansUtils {
             if (doc != null) {
                 for (Element element : XMLUtils.getChildren(doc.getDocumentElement(), "param")) {
                     if (element.getAttribute("name").equals("enabled")) {
-                         return new Boolean(element.getTextContent());
+                         return Boolean.valueOf(element.getTextContent());
                 }
                 }
             }
@@ -860,6 +885,8 @@ public class NetBeansUtils {
     
     public static final String NETBEANS_USERDIR =
             "netbeans_default_userdir="; // NOI18N
+    public static final String NETBEANS_CACHEDIR =
+            "netbeans_default_cachedir="; // NOI18N
     public static final String NETBEANS_JDKHOME =
             "netbeans_jdkhome="; // NOI18N
     public static final String NETBEANS_OPTIONS =
@@ -884,6 +911,10 @@ public class NetBeansUtils {
             "-Xss"; // NOI18N
     public static final String USER_HOME_TOKEN =
             "${HOME}"; // NOI18N
+    public static final String DEFAULT_USERDIR_ROOT =
+            "${DEFAULT_USERDIR_ROOT}"; // NOI18N
+    public static final String DEFAULT_CACHEDIR_ROOT =
+            "${DEFAULT_CACHEDIR_ROOT}"; // NOI18N
     public static final String NETBEANS_HOME_TOKEN =
             "${NETBEANS_HOME}"; // NOI18N
     public static final String UPDATER_FRAMENAME = 
